# ML

./: README.md  mpg.onnx  notes
model_affine/: model_affine.py
model_affine/affine/: affine.onnx  saved_model.pb
model_affine/affine/variables/: variables.data-00000-of-00001  variables.index
models/: extract_small_tiles.py  model_resnet50.py  saved_model.pb
models/variables/: variables.data-00000-of-00001  variables.index
models_mpg/: saved_model.pb
models_mpg/regression/: ml1.py
models_mpg/variables/: variables.data-00000-of-00001  variables.index
regression/: fuel.py  mpg.py  testfroze.py  testplot.py
service/examples/affine/: model_basic.py
service/examples/coco/: main.cpp
service/examples/load_model/: create_model.py  main.cpp
service/examples/mnist/: main.cpp
service/examples/mpg/: CMakeLists.txt  ModelInfo.txt  frozen_graph.pb  main.cpp  saved_model.pb
service/include/: BasicLoader.hpp  BasicModelManager.hpp  BasicModelManger.hpp  Loader.hpp  LoaderHarness.hpp  MRVLLoader.hpp  Model.h  Model.hpp  ModelInfos.h  ModelInfos.hpp  ModelManager.hpp  ONNXLoader.hpp  TFLoader.hpp  Tensor.h  Tensor.hpp
service/src/: BasicModelManager.cpp  LoaderHarness.cpp  Model.cpp  ModelInfos.cpp  Tensor.cpp
